feat(server): create order
