# server/src/main/databases/in-memory/in-memory-order-database.ts
@@ -1,0 +1,10 @@
+import { Order, OrderRepository } from '@pedido-express/domain';
+
+export class InMemoryOrderDatabase implements OrderRepository {
+  constructor(private readonly orders: Order[] = []) {}
+
+  create(order: Order): Promise<Order> {
+    this.orders.push(order);
+    return Promise.resolve(order);
+  }
+}
